--- a/docs/src/components/Demo/styles.css
+++ b/docs/src/components/Demo/styles.css
@@ -26,15 +26,15 @@
   justify-content: space-between;
 }
 .demo-wrapper {
-  width: 600px !important;
+  width: 100% !important;
   display: block !important;
-  margin-bottom: 50px !important;
-  height: 450px !important;
+  margin-bottom: 25px !important;
+  height: 400px !important;
 }
 .demo-wrapper-wide {
   width: 810px !important;
   display: block !important;
-  margin-bottom: 50px !important;
+  margin-bottom: 25px !important;
   height: 355px !important;
 }
 .demo-wrapper-medium {
@@ -44,7 +44,7 @@
   height: 300px !important;
 }
 .demo-editor {
-  height: 80% !important;
+  height: 275px !important;
   border: 1px solid #F1F1F1 !important;
   padding: 5px !important;
   border-radius: 2px !important;
@@ -55,13 +55,10 @@
   border: 1px solid #F1F1F1;
   padding: 5px;
   border-radius: 5px;
-  width: 400px;
+  width: 100%;
   border-radius: 2px;
-  height: 425px;
-  margin-left: 30px;
   resize: none;
-  margin-top: 127px;
-  height: 355px;
+  height: 200px;
 }
 .demo-toolbar-absolute {
   position: absolute !important;
@@ -91,14 +88,14 @@
   width: 715px !important;
   display: block !important;
   position: relative !important;
-  margin-bottom: 50px !important;
+  margin-bottom: 25px !important;
   height: 200px !important;
 }
 .demo-wrapper-relative-long {
   width: 715px !important;
   display: block !important;
   position: relative !important;
-  margin-bottom: 50px !important;
+  margin-bottom: 25px !important;
   height: 450px !important;
 }
 .bordered-option-classname {
